--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,7 +23,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.github.eigenein:joypad-android:5'
 }
 repositories {
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
