--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,8 +24,10 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.eigenein:joypad-android:5'
+    compile 'com.android.support:cardview-v7:26.1.0'
 }
 repositories {
     mavenCentral()
     maven { url "https://jitpack.io" }
+    maven { url "https://maven.google.com" }
 }
