--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.eigenein:joypad-android:5'
     compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.6'
 }
 repositories {
     mavenCentral()
